removed cosrs